--- a/euro/templates/euro/aboutus.html
+++ b/euro/templates/euro/aboutus.html
@@ -12,10 +12,10 @@ A propos de ce projet
       <div class="featurette">
         <img class="featurette-image img-circle pull-left" src="{% static 'euro/images/gaetan.png' %}" style="width:256px; margin-right:20px">
         <h2 class="featurette-heading">Gaëtan Eleouet. <span class="text-muted">Développeur artistique</span></h2>
-        <p class = "lead">Après avoir lu les circonstances qui ont menées au développement de ce projet vous comprendrez pourquoi j'adore les challenges.</p>
+        <p class = "lead">Après avoir lu les circonstances qui ont mené au développement de ce projet vous comprendrez pourquoi j'adore les challenges.</p>
         <p>Ingénieur en développement logiciel, artisan qui aime son métier, j'ai aujourd'hui tout développé (ou presque) du plus simple au plus complexe principalement dans le domaine de la Finance de marché.
-            <br/>J'ai depuis bientôt dix ans visité avec <a href="http://meritis.fr/"><img src="{% static 'euro/images/meritis.png' %}" alt="Meritis" style="width: 64px;"></a> la plupart des banques de la place parisienne. <br></p>
-          <p>Ce site a été développé en deux semaines sur notre temps libre, pour offrir une meilleur interface aux pronostics de nos collègues et amis. Leur pronostics ne sont pas plus justes, mais au moins ils sont jolis ;)</p>
+            <br/>J'ai, depuis bientôt dix ans, visité avec <a href="http://meritis.fr/"><img src="{% static 'euro/images/meritis.png' %}" alt="Meritis" style="width: 64px;"></a> la plupart des banques de la place parisienne. <br></p>
+          <p>Ce site a été développé en deux semaines sur notre temps libre, pour offrir une meilleure interface aux pronostics de nos collègues et amis. Leurs pronostics ne sont pas plus justes, mais au moins ils sont jolis ;)</p>
           <p>      
               J'ai accepté sans hésiter de me lancer dans ce projet, développer un site sur un marathon de code, découvrir un framework qui m'était inconnu et une façon de travailler aux antipodes de mon quotidien.
               Le challenge a été relevé, les technos inconnues apprivoisées et j'en ai retiré beaucoup de plaisir. J'aime apprendre et découvrir, et ça m'a permis de partager avec Moulaye une partie du travail de développeur/artiste/admin system/testeur/bô gosse...</p>
