--- a/euro/templates/euro/aboutus.html
+++ b/euro/templates/euro/aboutus.html
@@ -8,7 +8,7 @@
 <hr class="featurette-divider">
 <div class="row">
       <div class="featurette">
-        <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
+        <img class="featurette-image img-circle pull-left" src="https://media.licdn.com/media/p/2/000/05f/180/2bbe7a0.jpg">
         <h2 class="featurette-heading">Gaëtan Eleouet. <span class="text-muted">Développeur sans Vergogne ?</span></h2>
         <p class="lead"> Sans Vergogne, J'ai tout développé, du plus soimple au plus complexe principalement dans le domaine de la Finance de marché.
             J'aurais fini par faire la plupart des banques de la place parisienne. <br></p>
@@ -24,7 +24,7 @@
 <hr class="featurette-divider">
 <div class="row">
       <div class="featurette">
-        <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+        <img class="featurette-image img-circle pull-right" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAkRAAAAJDA3MGU1NGFmLWVjM2YtNGU4MS1hNGYwLWMzOWJjODdhNGQzMQ.jpg">
         <h2 class="featurette-heading">Moulaye K. Biaye. <span class="text-muted">Statisticien sans limite</span></h2>
         <p class="lead">
             Je fait référence....
