--- a/euro/templates/euro/landingpage.html
+++ b/euro/templates/euro/landingpage.html
@@ -2,18 +2,12 @@
 {% load nav_active %}
 {% load static %}
 {% load extra_euro %}
-
-
-<html>
+<!doctype html>
+<html lang='fr'>
 <head>
+        <meta charset="utf-8">
 
 <title>Euro 2016</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
 
     <link rel="shortcut icon" type="image/png" href="{% static 'euro/images/favicon.png' %}"/>
     <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap.min.css' %}">
@@ -35,125 +29,15 @@
 
 
 
-    <script type="text/javascript">
-	$(document).ready(function(){
-                var scroll_start = 0;
-                var startchange = $('#startchange');
-                var offset = startchange.offset();
-                    if (startchange.length){
-                $(document).scroll(function() {
-                    scroll_start = $(this).scrollTop();
-                    if(scroll_start > offset.top) {
-                          $(".navbar-default").css('background-color', '#ffffff');
-                       } else {
-                          $('.navbar-default').css('background-color', 'transparent');
-                       }
-                   });
-                    }
-                });
-    </script>
 
-    <style type="text/css">
-	/* navbar */
-    .navbar-default {
-        background-color: transparent;
-        border-color: transparent;
-        margin-bottom: 0px;
-        position: fixed;
-        width: 100%;
-        border-radius: 0px;
-        z-index: 10007;
-    }
-    .content-block-one {
-      padding: 30px;
-      margin-bottom: 0px;
-      color: inherit;
-      background-color: #eee;
-    }
-    .content-block-one h1,
-    .content-block-one .h1 {
-      color: inherit;
-    }
-    .content-block-one p {
-      margin-bottom: 15px;
-      font-size: 21px;
-      font-weight: 200;
-    }
-    .content-block-one > hr {
-      border-top-color: #d5d5d5;
-    }
-    .container .content-block-one {
-      border-radius: 6px;
-    }
-    .content-block-one .container {
-      max-width: 100%;
-    }
-    @media screen and (min-width: 768px) {
-      .content-block-one {
-        padding-top: 48px;
-        padding-bottom: 48px;
-      }
-      .container .content-block-one {
-        padding-right: 60px;
-        padding-left: 60px;
-      }
-      .content-block-one h1,
-      .content-block-one .h1 {
-        font-size: 63px;
-      }
-    }
-    .content-space-one {
-      padding: 0px;
-      margin-bottom: 0px;
-      color: inherit;
-      background: url(http://placehold.it/1200x650/0033cc/ffffff) no-repeat center center fixed;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      padding-top: 100px;
-      padding-bottom: 100px;
-    }
-    .content-space-two {
-      padding: 0px;
-      margin-bottom: 0px;
-      color: inherit;
-      background: url(http://placehold.it/1200x650/cc0000/ffffff) no-repeat center center fixed;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      padding-top: 100px;
-      padding-bottom: 100px;
-    }
-    .page-break {
-        width: 50%;
-        height: 3px;
-        background-color: #fff;
-        margin: 0 auto;
-    }
-</style>
+    
 </head>
 
 <body>
 <!-- Code's messsy, basic layout for a small project I'm doing. Follow me on twitter @taylorgrendel for free pie!-->
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!--<a class="navbar-brand" href="#">Brand</a>-->
-    </div>
+<nav class="navbar navbar-default  navbar-fixed-top">
+  <div class="container-fluid">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <nav class="navbar navbar-default ">
-        <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'euro:landing' %}"><img src="{% static 'euro/images/logo.jpg' %}" alt="Euro 2016" height="32" /></a>
             </div>
@@ -178,9 +62,7 @@
             </ul>
         </div>
     </nav>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+
 
 <div id="startchange"></div>
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
