--- a/euro/static/euro/style.css
+++ b/euro/static/euro/style.css
@@ -46,6 +46,14 @@ h1, h2, h3, h4 {
     float: right;
 }
 
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -250px;
+    visibility: hidden;
+}
+
 #classement th {
     background-color: #4CAF50;
     color: white;
