--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -35,7 +35,7 @@
 </head>
 
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-    <nav class="navbar navbar-default ">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'euro:landing' %}"><img src="{% static 'euro/images/logo.jpg' %}" alt="Euro 2016" height="32" /></a>
