--- a/euro/templates/euro/nexts.html
+++ b/euro/templates/euro/nexts.html
@@ -19,7 +19,8 @@
     <div class="col-sm-11">
         {% for date in latest_rencontre_date %}
         <div class="marged">
-        <div class="panel panel-default" id="{{date |  date:'d_F_Y'}}">
+            <a class="anchor" id="{{date |  date:'d_F_Y'}}"></a>
+        <div class="panel panel-default" >
             <div class="panel-heading">
                 <span class="date-match">{{date |  date:'l d F Y'}}</span>
             </div>
