Ajout du profil

--- a/euro/templates/euro/aboutus.html
+++ b/euro/templates/euro/aboutus.html
@@ -25,11 +25,20 @@ A propos de ce projet
 <hr class="featurette-divider">
 <div class="row">
       <div class="featurette">
-        <img class="featurette-image img-circle pull-right" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAkRAAAAJDA3MGU1NGFmLWVjM2YtNGU4MS1hNGYwLWMzOWJjODdhNGQzMQ.jpg">
-        <h2 class="featurette-heading">Moulaye K. Biaye. <span class="text-muted">Statisticien sans limite</span></h2>
+        <img class="featurette-image img-circle pull-right" src="{% static 'euro/images/Moulaye.png' %}" style="width:256px; margin-right:20px">
+        <h2 class="featurette-heading">Moulaye K. Biaye. <span class="text-muted">Statisticien multi-casquette</span></h2>
         <p class="lead">
-            Je fait référence....
+            Ingénieur Statisticien, titulaire d'un Master en Finance de Marché, je vais pourtant me présenter en tant que développeur.
         </p>
+          <p>
+              Après une expérience aux CNRS, à la Société Générale et maintenant chez Exane Derivatives, ma passion a toujours été de tout apprendre. Depuis peu, c’est le développement web qui me passionne. <br>
+              Amateur de foot inconditionnel, j'ai proposé à Gaëtan, le Développeur artistique de m'accompagner dans un nouveau challenge : développer un site de pronostic en 2 semaines.<br>
+
+            Bon nombre de personnes nous croyait incapable de le relever le défis. Mais à force de ténacité, de pauses déj. et de soirées passées à coder, nous sommes venus à bout de ce challenge que nous sommes heureux de partager avec vous.
+
+            www.pronostic-euro2016.eu est donc un site de pronostic (pas de pari) qui donne la possibilité aux utilisateurs de prédire les résultats des matchs de l’euro en individuel comme en équipe dans un but ludique mais aussi avec un cadeau espéré de la part de nos partenaires.
+
+            Soyez le prochain et challenger vos collègues, amis (inscrivez-vous dès maintenant, l’euro, c’est maintenant !)</p>
       </div>
 
 
@@ -37,6 +46,8 @@ A propos de ce projet
 </div>
 
 <div>
+<h2>Crédit Image:</h2>
+    https://unsplash.com/
 <h2>Powered by:</h2>
     <img src="{% static 'euro/images/power/bootstrap.png' %}" style="height:48px; margin-left:40px;margin-right:30px">
     <img src="{% static 'euro/images/power/html5css3.jpg' %}" style="height:48px; margin-right:30px">
