--- a/euro/templates/euro/landingpage.html
+++ b/euro/templates/euro/landingpage.html
@@ -1,8 +1,8 @@
+<!doctype html>
 {% load staticfiles %}
 {% load nav_active %}
 {% load static %}
 {% load extra_euro %}
-<!doctype html>
 <html lang='fr'>
 <head>
         <meta charset="utf-8">
@@ -78,11 +78,11 @@
     <div class="item active">
       <img src="https://images.unsplash.com/photo-1430232324554-8f4aebd06683?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=7e53fe70393731a353903bf1b7104764" alt="..." width="100%">
       <div class="carousel-caption">
-        ...
+        Soyez le prochain gagnant
       </div>
     </div>
     <div class="item">
-      <img src="http://placehold.it/1200x650" alt="..." width="100%">
+      <img src="https://images.unsplash.com/photo-1434648957308-5e6a859697e8" alt="..." width="100%">
       <div class="carousel-caption">
         ...
       </div>
