--- a/euro/templates/euro/landingpage.html
+++ b/euro/templates/euro/landingpage.html
@@ -25,73 +25,89 @@
     <script src="{% static 'euro/loginform.js' %}" type="text/javascript"></script>
 
     <script src="{% static 'euro/vendor/jquery.cropit.js' %}"></script>
+    <script type="text/javascript">
+        // Definition of global variables for javascript context
+        var contact_url = "{% url 'euro:check_login' %}";
+        var afterlogin = "{% url 'euro:home' %}";
+        var save_url = "{% url 'euro:save' %}";
+    </script>
+
+<style type="text/css">
+		.carousel{
+	    	background: #2f4357;
+    		margin-top: 0px;
+		}
+		.carousel .item img{
+    		margin: 0 auto; /* Align slide image horizontally center */
+		}
+		.carousel-caption {
+	   	position: absolute;
+	   	top:300px
+		}
+		.bs-example{
+			margin: 0px;
+		}
+	</style>
 
 
 
 
-
-    
 </head>
 
 <body>
 <!-- Code's messsy, basic layout for a small project I'm doing. Follow me on twitter @taylorgrendel for free pie!-->
-<nav class="navbar navbar-default  navbar-fixed-top">
-  <div class="container-fluid">
-
-            <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'euro:landing' %}"><img src="{% static 'euro/images/logo.jpg' %}" alt="Euro 2016" height="32" /></a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li class="{% active request 'euro:home' %}"><a href="{% if username %}{% url 'euro:home' %}{% else %}{% url 'euro:nexts' %}{% endif %}">Home</a></li>
-                <li class="{% active request 'euro:nexts' %}"><a href="{% url 'euro:nexts' %}">Nexts</a></li>
-                <li class="{% active request 'euro:index' %}"><a href="{% url 'euro:index' %}">Events</a></li>
-                <li class="{% active request 'euro:classement' %}"><a href="{% url 'euro:classement' %}">Classement</a></li>
-                <li class="{% active request 'euro:teams' %}"><a href="{% url 'euro:teams' %}">Teams</a></li>
-                <li class="{% active request 'euro:aboutus' %}"><a href="{% url 'euro:aboutus' %}">A propos</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {% if username %}
-                <li><a href="#">Welcome, {{username|capfirst}}</a></li>
-                <li>
-                    <a href="{% url 'euro:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
-                </li>
-                {% else %}
-                <li><a href="#" data-toggle="modal" data-target="#myModalRegister"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a href="#" data-toggle="modal" data-target="#myModalLogin"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
 
 
-<div id="startchange"></div>
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="https://images.unsplash.com/photo-1430232324554-8f4aebd06683?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=7e53fe70393731a353903bf1b7104764" alt="..." width="100%">
+      <img src="{% static 'euro/images/stadium1.jpg' %}" alt="..." height="80%">
       <div class="carousel-caption">
-        Soyez le prochain gagnant
+        <h1>
+        Tu penses que la France va gagner, alors exprime le !</h1>
+
+        <h2>Donnez VOS pronostics pour chaque match</h2>
       </div>
     </div>
     <div class="item">
-      <img src="https://images.unsplash.com/photo-1434648957308-5e6a859697e8" alt="..." width="100%">
+      <img src="{% static 'euro/images/stadium2.jpg' %}" alt="..." height="80%">
       <div class="carousel-caption">
-        ...
+        <h1>
+        Inscrivez-vous dès maintenant, commencez à faire vos pronostics et devenez le meilleur !
+        </h1>
+        <h2>
+        Faites votre chemin dans le classement des membres
+        </h2>
       </div>
     </div>
     <div class="item">
-      <img src="https://images.unsplash.com/photo-1430232324554-8f4aebd06683?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=7e53fe70393731a353903bf1b7104764" alt="..." width="100%">
+      <img src="{% static 'euro/images/stadium1.jpg' %}" alt="..." height="80%">
       <div class="carousel-caption">
-        ...
+        <h1>
+        Vivez l'ambiance de l'Euro avec vos collègues, vos amis, chez vous, au travail...
+        </h1>
+        <h2>
+        Rejoignez une équipe avec vos amis
+        </h2>
       </div>
+    </div>
+    <div class="item">
+      <img src="{% static 'euro/images/stadium1.jpg' %}" alt="..." height="80%">
+      <div class="carousel-caption" >
+          <h1>Pour les passionnés de foot comme pour les néophytes !</h1>
+          <a href="#" data-toggle="modal" data-target="#myModalRegister"><h2>Inscrivez vous pour commencer !</h2></a>
+
+      </div>
+
     </div>
   </div>
 
@@ -199,6 +215,118 @@
 
 </div>
 
+
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{% url 'euro:landing' %}"><img src="{% static 'euro/images/logo.jpg' %}" alt="Euro 2016" height="32" /></a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="{% active request 'euro:home' %}"><a href="{% if username %}{% url 'euro:home' %}{% else %}{% url 'euro:nexts' %}{% endif %}">Home</a></li>
+                <li class="{% active request 'euro:nexts' %}"><a href="{% url 'euro:nexts' %}">Nexts</a></li>
+                <li class="{% active request 'euro:index' %}"><a href="{% url 'euro:index' %}">Events</a></li>
+                <li class="{% active request 'euro:classement' %}"><a href="{% url 'euro:classement' %}">Classement</a></li>
+                <li class="{% active request 'euro:teams' %}"><a href="{% url 'euro:teams' %}">Teams</a></li>
+                <li class="{% active request 'euro:aboutus' %}"><a href="{% url 'euro:aboutus' %}">A propos</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if username %}
+                <li><a href="#">Welcome, {{username|capfirst}}</a></li>
+                <li>
+                    <a href="{% url 'euro:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+                </li>
+                {% else %}
+                <li><a href="#" data-toggle="modal" data-target="#myModalRegister"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#myModalLogin"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+
+
+<div id="myModalLogin" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="login">
+                        {% csrf_token %}
+                        <div class="login-form">
+                            <div class="form-group ">
+                                <input type="text" class="form-control" placeholder="Username " id="username" name="username" aria-hidden="true"/>
+                                <i class="fa fa-user"></i>
+                            </div>
+                            <div class="form-group log-status">
+                                <input type="password" class="form-control" placeholder="Password" id="password" name="password" aria-hidden="true"/>
+                                <i class="fa fa-lock"></i>
+                            </div>
+
+                            <!--a class="link" href="#">Lost your password?</a-->
+                            <button type="submit" class="log-btn" id="log-btn">Log in</button>
+
+
+                        </div>
+                    </form>
+                </div>
+                <!--div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div-->
+            </div>
+
+        </div>
+    </div>
+
+    <div id="myModalRegister" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="register" action="{% url 'euro:register' %}" method="post" onsubmit="return validateRegister()">
+                        {% csrf_token %}
+                        <div class="login-form">
+                            <div class="form-group ">
+                                <input type="text" class="form-control" placeholder="Username " id="username" name="username" required aria-hidden="true"/>
+                                <i class="fa fa-user"></i>
+                            </div>
+                            <div class="form-group ">
+                                <input type="text" class="form-control" placeholder="Email " id="email" name="email" required aria-hidden="true"/>
+                                <i class="fa fa-envelope"></i>
+                            </div>
+                            <div class="form-group log-status">
+                                <input type="password" class="form-control" placeholder="Password" id="password" name="password" required aria-hidden="true"/>
+                                <i class="fa fa-lock"></i>
+                            </div>
+                            <label>Repeat:</label>
+                            <div class="form-group log-status">
+                                <input type="password" class="form-control" placeholder="Password" id="password2" name="password2" required aria-hidden="true"/>
+                                <i class="fa fa-lock"></i>
+                            </div>
+                            <!--a class="link" href="#">Lost your password?</a-->
+                            <button type="submit" class="log-btn" id="register-btn">Register</button>
+
+
+                        </div>
+                    </form>
+                </div>
+                <!--div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div-->
+            </div>
+
+        </div>
+    </div>
 
 <!--
 <div class="content-space-two">
