add link to credit photos

--- a/euro/templates/euro/aboutus.html
+++ b/euro/templates/euro/aboutus.html
@@ -46,8 +46,13 @@ A propos de ce projet
 </div>
 
 <div>
+    <br/>
+    <br/> 
+    <hr class="featurette-divider">
+  
 <h2>Crédit Image:</h2>
-    https://unsplash.com/
+    <p style="margin-left:40px"><a href="https://unsplash.com/"> Unsplash</a></p>
+    <br/>
 <h2>Powered by:</h2>
     <img src="{% static 'euro/images/power/bootstrap.png' %}" style="height:48px; margin-left:40px;margin-right:30px">
     <img src="{% static 'euro/images/power/html5css3.jpg' %}" style="height:48px; margin-right:30px">
