--- a/euro/templates/euro/landingpage.html
+++ b/euro/templates/euro/landingpage.html
@@ -1,30 +1,8 @@
-<!doctype html>
+{% extends 'euro/base.html' %} 
 {% load staticfiles %}
 {% load nav_active %}
 {% load static %}
 {% load extra_euro %}
-<html lang='fr'>
-<head>
-        <meta charset="utf-8">
-
-<title>Euro 2016</title>
-
-    <link rel="shortcut icon" type="image/png" href="{% static 'euro/images/favicon.png' %}"/>
-    <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap-theme.min.css' %}">
-    <link rel='stylesheet prefetch' href="{% static 'euro/vendor/font-awesome.min.css' %}">
-
-
-    <script src="{% static 'euro/vendor/jquery.min.js' %}"></script>
-    <script src="{% static 'euro/vendor/bootstrap.min.js' %}"></script>
-
-    <link rel='stylesheet prefetch' href="{% static 'euro/vendor/jquery.dynatable.css' %}">
-    <script src="{% static 'euro/vendor/jquery.dynatable.js' %}"></script>
-
-    <link rel="stylesheet" type="text/css" href="{% static 'euro/style.css' %}" />
-    <script src="{% static 'euro/loginform.js' %}" type="text/javascript"></script>
-
-    <script src="{% static 'euro/vendor/jquery.cropit.js' %}"></script>
     <script type="text/javascript">
         // Definition of global variables for javascript context
         var contact_url = "{% url 'euro:check_login' %}";
@@ -33,30 +11,11 @@
     </script>
 
 <style type="text/css">
-		.carousel{
-	    	background: #2f4357;
-    		margin-top: 0px;
-		}
-		.carousel .item img{
-    		margin: 0 auto; /* Align slide image horizontally center */
-		}
-		.carousel-caption {
-	   	position: absolute;
-	   	top:300px
-		}
-		.bs-example{
-			margin: 0px;
-		}
+		
 	</style>
 
 
-
-
-</head>
-
-<body>
-<!-- Code's messsy, basic layout for a small project I'm doing. Follow me on twitter @taylorgrendel for free pie!-->
-
+{% block form %} 
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -215,127 +174,4 @@
 
 </div>
 
-
-
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-
-            <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'euro:landing' %}"><img src="{% static 'euro/images/logo.jpg' %}" alt="Euro 2016" height="32" /></a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li class="{% active request 'euro:home' %}"><a href="{% if username %}{% url 'euro:home' %}{% else %}{% url 'euro:nexts' %}{% endif %}">Home</a></li>
-                <li class="{% active request 'euro:nexts' %}"><a href="{% url 'euro:nexts' %}">Nexts</a></li>
-                <li class="{% active request 'euro:index' %}"><a href="{% url 'euro:index' %}">Events</a></li>
-                <li class="{% active request 'euro:classement' %}"><a href="{% url 'euro:classement' %}">Classement</a></li>
-                <li class="{% active request 'euro:teams' %}"><a href="{% url 'euro:teams' %}">Teams</a></li>
-                <li class="{% active request 'euro:aboutus' %}"><a href="{% url 'euro:aboutus' %}">A propos</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {% if username %}
-                <li><a href="#">Welcome, {{username|capfirst}}</a></li>
-                <li>
-                    <a href="{% url 'euro:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
-                </li>
-                {% else %}
-                <li><a href="#" data-toggle="modal" data-target="#myModalRegister"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a href="#" data-toggle="modal" data-target="#myModalLogin"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-
-
-<div id="myModalLogin" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Login</h4>
-                </div>
-                <div class="modal-body">
-                    <form id="login">
-                        {% csrf_token %}
-                        <div class="login-form">
-                            <div class="form-group ">
-                                <input type="text" class="form-control" placeholder="Username " id="username" name="username" aria-hidden="true"/>
-                                <i class="fa fa-user"></i>
-                            </div>
-                            <div class="form-group log-status">
-                                <input type="password" class="form-control" placeholder="Password" id="password" name="password" aria-hidden="true"/>
-                                <i class="fa fa-lock"></i>
-                            </div>
-
-                            <!--a class="link" href="#">Lost your password?</a-->
-                            <button type="submit" class="log-btn" id="log-btn">Log in</button>
-
-
-                        </div>
-                    </form>
-                </div>
-                <!--div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div-->
-            </div>
-
-        </div>
-    </div>
-
-    <div id="myModalRegister" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Login</h4>
-                </div>
-                <div class="modal-body">
-                    <form id="register" action="{% url 'euro:register' %}" method="post" onsubmit="return validateRegister()">
-                        {% csrf_token %}
-                        <div class="login-form">
-                            <div class="form-group ">
-                                <input type="text" class="form-control" placeholder="Username " id="username" name="username" required aria-hidden="true"/>
-                                <i class="fa fa-user"></i>
-                            </div>
-                            <div class="form-group ">
-                                <input type="text" class="form-control" placeholder="Email " id="email" name="email" required aria-hidden="true"/>
-                                <i class="fa fa-envelope"></i>
-                            </div>
-                            <div class="form-group log-status">
-                                <input type="password" class="form-control" placeholder="Password" id="password" name="password" required aria-hidden="true"/>
-                                <i class="fa fa-lock"></i>
-                            </div>
-                            <label>Repeat:</label>
-                            <div class="form-group log-status">
-                                <input type="password" class="form-control" placeholder="Password" id="password2" name="password2" required aria-hidden="true"/>
-                                <i class="fa fa-lock"></i>
-                            </div>
-                            <!--a class="link" href="#">Lost your password?</a-->
-                            <button type="submit" class="log-btn" id="register-btn">Register</button>
-
-
-                        </div>
-                    </form>
-                </div>
-                <!--div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div-->
-            </div>
-
-        </div>
-    </div>
-
-<!--
-<div class="content-space-two">
-    <div class="text-center">
-        <h1>This separates content!</h1>
-        <div class="page-break"></div>
-        <p>Other information can go here</p>
-    </div>
-</div>
--->
-</body>
-</html>
+{% endblock %}
