--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -55,8 +55,8 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Welcome, {{username|capfirst}}
                     <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Change password</a></li>
-                        <li><a href="#">Change email</a></li> 
+                        <li><a href="{% url 'euro:changePassword' %}">Change password</a></li>
+                         
                     </ul>
                 </li>
                 
