Mise à jour du FAQ

--- a/euro/templates/euro/faq.html
+++ b/euro/templates/euro/faq.html
@@ -30,14 +30,15 @@
 
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h4>Comment est calculé mon score ?</h4>
+            <h4>Comment calcule t-on mon score ?</h4>
         </div>
 
         <div class="panel-body">
-            Comme nous considérons que tous les pronostics sont bons, le calcul des score est fait de manière à vous faire gagner un point avec la plus forte probabilité.
+            Comme nous considérons que tous les pronostics sont bons, le calcul des scores est fait de manière à vous faire gagner des points aux maximum.
             <ul>
                 <li>Le bon score + le bon vainqueur (match null inclu): 3 points</li>
                 <li>Le bon score pour une des équipe : 1 point</li>
+                <li>Le bon vainqueur mais pas le bon score : 1 point</li>
                 <li>Aucun des cas ci-dessus : On itère sur le prochain match</li>
                 <br>
             </ul>
@@ -50,9 +51,9 @@
         </div>
 
         <div class="panel-body">
-            Oui. Pour ce faire, connectez-vous à votre compte. Dans l'onglet home, cliquez sur join a team.
+            Oui. Pour ce faire, connectez-vous à votre compte. Dans l'onglet Accueil, cliquez sur join a team.
             <br> A ce stade, vous avez la possibilité de rejoindre une équipe existante ou d'en créer une autre.
-            <br> Vous allez continuer Ã  faire vos pronostics en individuel et vous aurez votre score individuel ainsi que le classement qui va avec.
+            <br> Vous allez continuer à faire vos pronostics en individuel et vous aurez votre score individuel ainsi que le classement correspondant.
             <br> Cependant, vous avez aussi un score aggrégé de votre équipe avec un classement par équipe dans l'onglet team.
             <br>
         </div>
@@ -61,11 +62,23 @@
 
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h4>Comment calculte t-on le score d'une équipe ? </h4>
+            <h4>Comment calcule t-on le score d'une équipe ? </h4>
         </div>
 
         <div class="panel-body">
             Le score d'une équipes est calculée en moyennant sur la somme des scores des membres.
+        </div>
+    </div>
+
+
+    <br>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4>Qu'est ce que je gagne à faire des pronostics ? </h4>
+        </div>
+
+        <div class="panel-body">
+            Il n y a pas d'argent en jeux, pas de cadeaux non plus, juste une promesse de fun entre collègues, amis, en famille.
         </div>
     </div>
 
