change password feature

--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -55,7 +55,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Welcome, {{username|capfirst}}
                     <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'euro:changePassword' %}">Change password</a></li>
+                        <li><a href="{% url 'euro:changePassword' %}"><i class="fa fa-key" aria-hidden="true"> Change password </i></a></li>
                          
                     </ul>
                 </li>
