--- a/euro/templates/euro/resetPassword.html
+++ b/euro/templates/euro/resetPassword.html
@@ -29,8 +29,7 @@
                             </div>
                             
                             <button type="submit" class="reset-btn" id="resetpassword-btn">
-                            <i class="fa fa-share" aria-hidden="true"></i>
-                            &nbsp; Reset Password </button>
+                            &nbsp; OK </button>
 
 
                         </div>
